fix: add cache busting version to script.js reference

--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
 
     <!-- 👉 你的自定義 JS -->
-    <script src="script.js"></script>
+    <script src="script.js?v=20260224"></script>
 
 
 
